@@ -14,7 +14,8 @@ Fixed - indicates a bug fix
  11th July 2010 - FreeRapid Downloader 0.85 Alfa 1
   Added : New action in Remove menu: "Remove Completed Links and Deleted Files"
   Added : New user option: "Slim lines in History dialog"
-  Added : New user options for speed limiter
+  Added : Speed (bandwidth) Limiter
+  Added : Table column sorting is enabled in the main table by default
   Added : New download state SKIPPED, which is used for files that already exist and were skipped by the user
   Added : Menu item for refreshing proxy list
   Added : New setting for handling plugin updates: "Update and restart automatically if no downloads in progress"
@@ -23,7 +24,9 @@ Fixed - indicates a bug fix
   Added : plugin API version 0.85
             - support for priorities of each plugin
             - experimental support for RTMP protocol
-  Added : max downloads option per plugin              
+  Added : Highly improved plugin settings
+            - max concurrent (parallel) downloads option per plugin
+            - plugin can be disabled for clipboard monitoring                  
   Added : Experimental support for downloading basic RTMP streams.
             This was made possible by Flazr v0.6, which we took and modified slightly to fit our needs.
             Big thanks to the developers of Flazr! Home page: http://www.flazr.com/
@@ -31,6 +34,7 @@ Fixed - indicates a bug fix
   Changed : Less required restarts after plugin updates
   Fixed : Problem with downloading txt files + using description, see http://wordrider.net/forum/read.php?7,4681,4696
   Fixed : Inconsistent behavior of "Close to tray" option
+  Fixed : file properties dialog (Information dialog) cannot be closed by OK button
 
  29th October 2009 - FreeRapid Downloader 0.83 Update 1
   Added : Romanian language [thanks to de-a dura lex]
